# GUI_gcode

./: Axo3_1mat.gcode  LICENCE.txt  README.md  axolotl_1mat.py  axolotl_2mat.py
src/: CMakeLists.txt  DimensionSection.cpp  DimensionSection.h  GenerateSection.cpp  GenerateSection.h  InfillSection.cpp  InfillSection.h  MaterialSection.cpp  MaterialSection.h  SaveSection.cpp  SaveSection.h  ShapeSection.cpp  ShapeSection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opengl.cpp  opengl.h  pythonexecutor.cpp  pythonexecutor.h  section0.cpp  section0.h  section1.cpp  section1.h  section2.cpp  section2.h  section3.cpp  section3.h  section4.cpp  section4.h  section5.cpp  section5.h  startpage.cpp  startpage.h
src/Header Files/: GenerateSection.h  InfillSection.h  MaterialSection.h  ShapeSection.h  dimensionsection.h  mainwindow.h  materialsection.h  opengl.h  savesection.h  shapesection.h  startpage.h
src/Source Files/: DimensionSection.cpp  GenerateSection.cpp  InfillSection.cpp  MaterialSection.cpp  SaveSection.cpp  ShapeSection.cpp  dimensionsection.cpp  infillsection.cpp  main.cpp  mainwindow.cpp  materialsection.cpp  opengl.cpp  savesection.cpp  shapesection.cpp  startpage.cpp
src/translations/: myapp_en.qm  myapp_en.ts  myapp_es.qm  myapp_es.ts
